src/css/components/_header.scss
@use '../settings/color' as color;
@use '../settings/font-family' as ff;
@use '../settings/font-weight' as fw;
@use '../tools/media-queries' as mq;
@use '../tools/function' as func;

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: color.$oasis;
  z-index: 999;

  &__wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1140px;
    width: 100%;
    height: 80px;
    margin: 0 auto;
    @include mq.mx1200 {
      padding: 20px 5%;
    }
  }

  &__logo {
    display: inline-block;
    width: 120px;
    height: auto;
    @include mq.sp {
      width: 100px;
    }
  }

  &__nav {
    @include mq.tablet {
      position: absolute;
      top: 80px;
      right: 0;
      width: 0;
      height: 100vh;
      background-color: color.$oasis;
      transition: 0.5s;
      overflow: hidden;
    }

    &.active {
      @include mq.tablet {
        width: 50%;
      }
    }
  }

  &__tab-list {
    display: flex;
    width: 100%;
    @include mq.tablet {
      flex-direction: column;
      width: 100%;
      padding: 30px 5% 0;
      gap: 40px 0;
      opacity: 0;
      transition: 0.3s ease;
    }

    &.active {
      opacity: 1;
    }
  }

  &__tab-item {
    position: relative;
    @include mq.tablet {
      width: 100%;
    }

    &::after {
      @include mq.tablet {
        content: "";
        position: absolute;
        left: 0;
        bottom: -15px;
        width: 100%;
        border: 1px solid color.$gray-b7b;
        transition: 0.4s linear;
      }
    }

    &:not(:last-child) {
      margin-right: 40px;
      @include mq.tablet {
        margin-right: 0;
      }
    }

    &.active {
      &::after {
        border: 1px solid color.$primary;
      }

      .header__tab-name {
        color: color.$orange-ff6;

        &::after {
          content: '';
          position: absolute;
          width: 100%;
          left: 0;
          bottom: -15px;
          border: 1px solid;
          @include mq.tablet {
            border: unset;
          }
        }
      }
    }
  }

  &__tab-name {
    position: relative;
    font: fw.$bold 1.5rem ff.$rubik;
    color: color.$blue-053;
    @include mq.tablet {
      font-size: 1.7rem;
    }
    @include mq.sp {
      font-size: 1.5rem;
    }

    &:hover {
      color: color.$orange-ff6;

      &::after {
        content: '';
        position: absolute;
        width: 100%;
        left: 0;
        bottom: -15px;
        border: 1px solid;
      }
    }
  }

  &__mobile-nav {
    display: none;
    background: transparent;
    border: none;
    cursor: pointer;
    @include mq.tablet {
      display: flex;
      flex-direction: column;
      gap: 5px 0;
    }
  }

  &__nav-line {
    width: 30px;
    border: 2px solid color.$blue-053;
    transition: 0.5s;
    transform: skew(5deg);

    &.active {
      border: 2px solid color.$primary;

      &:first-child {
        transform: rotate(-45deg) translate(-5px, 5px);
      }
  
      &:nth-child(2) {
        opacity: 0;
      }
  
      &:nth-child(3) {
        transform: rotate(45deg) translate(-5px, -5px);
      }
    }
  }

  &__nav-text {
    font: fw.$semibold 1rem ff.$rubik;
    color: color.$blue-053;

    &.active {
      font-weight: fw.$bold;
      color: color.$primary;
    }
  }
}

